# telegram-faq-bot

./: .env.example  .gitignore  AI_DIALOG_IMPLEMENTATION.md  BUGFIX.md  CHANGELOG.md  COMPREHENSIVE_IMPROVEMENT_PLAN.md  CONFIGURATION.md  CONVERSATIONAL_IMPROVEMENTS.md  DOCS_NAVIGATION.md  FULL_IMPROVEMENT_PLAN.md  HOW_TO_RESTART.md  IMPLEMENTATION_SUMMARY.md  LOADING_INDICATOR_FEATURE.md  MODERNIZATION_SUMMARY.md  NATURAL_CONVERSATION_UPDATE.md  OLLAMA_SETUP.md  OLLAMA_SUCCESS.md  QUALITY_STANDARD.md  QUICKSTART.md  QUICKSTART_EN.md  QUICK_START_OLLAMA.md  README.md  README_AI_UPGRADE.md  README_EN.md  README_MODERNIZATION.md  SALES_ASSISTANT_GUIDE.md  START_HERE.md  TESTING.md  TESTING_GUIDE.md  TIMEOUT_FIX.md  clean_restart.bat  config.json  install.ps1  install_simple.bat  pyproject.toml  requirements.txt  restart_bot.bat  restart_clean.bat  run.ps1  run_simple.bat  (+1 more)
data/: faq.json
src/: __init__.py  config.py  main.py
src/ai/: __init__.py  ollama_client.py  prompts.py
src/bot/: __init__.py  keyboards.py
src/compliance/: __init__.py  consent_tracker.py  data_minimization.py  privacy_handler.py
src/database/: __init__.py  context.py  models.py
src/funnel/: __init__.py  acquisition.py  closing.py  complaints.py  offer.py  qualification.py  retention.py  router.py  stages.py  support.py
src/handoff/: __init__.py  escalation_rules.py  sla_tracker.py  ticket_manager.py
src/knowledge/: __init__.py  faq_loader.py  search.py
src/metrics/: __init__.py  calculator.py  (+1 more)
tests/: __init__.py  test_config_loader.py  test_search.py  test_text_filter.py
(+19 files in other folders)
